--- a/html-css/index.html
+++ b/html-css/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Imagem dinâmica</h1>
-    <p>Tente abrir esse site em vários dispositivos diferentes ou simplesmente aumente e diminua o tamanho</p>
+    <p>Tente abrir esse site em vários dispositivos diferentes ou simplesmente aumente e diminua o tamanho da tela</p>
 
     <picture>
         <source media="(max-width:750px)" srcset="html-css/imagens/foto-p.png" type="image/png">
