--- a/html-css/exercicios/ex012/index.html
+++ b/html-css/exercicios/ex012/index.html
@@ -8,9 +8,13 @@
 <body>
     <h1>Inserindo vídeos hospedados localmente</h1>
     <p>Este vídeo está hospedado no meu próprio servidor.</p>
-    <video width="500" poster="imagens/limoes-capa.png" controls>
+    <video width="560" poster="imagens/limoes-capa.png" controls>
         <source src="midias/meu-video.mp4" type="video/mp4">
         <p>Seu navegador não tem compatibilidade com reprodução de vídeos.</p>
     </video>
+    <h1>Inserindo vídeos do YouTube</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/GQYVu94I998?si=9bqj7UOXON5euA-F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/126287950?h=c655f0ff29&title=0" width="560" height="303" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+
 </body>
 </html>
