--- a/html-css/exercicios/d009/index.html
+++ b/html-css/exercicios/d009/index.html
@@ -10,6 +10,7 @@
             background-color: rgb(29, 26, 26);
         }
         h1{
+            text-align: center;
             color: white;
         }
     </style>
