--- a/html-css/desafios/d009/cursop.html
+++ b/html-css/desafios/d009/cursop.html
@@ -7,12 +7,12 @@
     <title>Python</title>
 </head>
 <body>
-    <section>
+    <main>
         <h1>Curso de Python</h1>
-        <iframe width="450" height="315" src="https://www.youtube.com/embed/nIHq1MtJaKs?si=xGj8ZYmsz6uCjxYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="600" height="315" src="https://www.youtube.com/embed/nIHq1MtJaKs?si=xGj8ZYmsz6uCjxYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
         <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6" target="_blank">Veja o curso completo</a>
-        <a href="index.html"><button>Voltar</button></a>
-    </section>
+        </main>
+    <a href="index.html"><img src="imagens/voltar.png" alt="imagem voltar"></a>
 </body>
 </html>
