--- a/html-css/desafios/d009/index.html
+++ b/html-css/desafios/d009/index.html
@@ -10,15 +10,16 @@
 </head>
 
 <body>
-    <section>
-    <h1>Vídeos legais para assistir</h1>
-    <picture>
-    <a href="cursoht.html" target="_self"><img src="imagens/thumb-html.png" alt="imagem do curso de HTML"></a>
-    <a href="curtojs.html"><img src="imagens/thumb-js.png" alt="imagem do curso de JavaScript"></a>
-    <a href="cursohard.html"><img src="imagens/thumb-hardware.png" alt="imagem do curso de Hardware"></a>
-    <a href="cursop.html"><img src="imagens/thumb-python.png" alt="imagem do curso de Python"></a>
-</picture>
-</section>
+    <main>
+        <h1>Vídeos legais para assistir</h1>
+        <picture>
+            <a href="cursoht.html" target="_self"><img src="imagens/thumb-html.png" alt="imagem do curso de HTML"></a>
+            <a href="curtojs.html"><img src="imagens/thumb-js.png" alt="imagem do curso de JavaScript"></a>
+            <a href="cursohard.html"><img src="imagens/thumb-hardware.png" alt="imagem do curso de Hardware"></a>
+            <a href="cursop.html"><img src="imagens/thumb-python.png" alt="imagem do curso de Python"></a>
+        </picture>
+        
+    </main>
 </body>
 
 </html>
