--- a/html-css/desafios/d009/curtojs.html
+++ b/html-css/desafios/d009/curtojs.html
@@ -7,12 +7,12 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <section>
+    <main>
         <h1>Curso de JavaScript</h1>
-        <iframe width="450" height="315" src="https://www.youtube.com/embed/1-w1RfGIov4?si=JA9XAvNfOGUgc-Oy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="600" height="315" src="https://www.youtube.com/embed/1-w1RfGIov4?si=JA9XAvNfOGUgc-Oy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
-        <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1" target="_blank"></a>>Veja o curso completo</a>
-        <a href="index.html"><button>Voltar</button></a>
-    </section>
+        <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1" target="_blank">Veja o curso completo</a>
+        </main>
+    <a href="index.html"><img src="imagens/voltar.png" alt="imagem voltar"></a>
 </body>
 </html>
