--- a/html-css/desafios/d009/cursoht.html
+++ b/html-css/desafios/d009/cursoht.html
@@ -19,7 +19,8 @@
         <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" target="_blank">Veja o
         curso completo</a>
         </main>
-    <a href="index.html"><img src="imagens/voltar.png" alt="imagem voltar"></a>
+
+    <a href="index.html" class="botao"><img src="imagens/voltar.png" alt="imagem voltar"></a>
 </body>
 
 </html>
