--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,15 +7,26 @@
     <style>
         body {
             height: 100vh;
+
+            /*
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            Shorthand - background
+                color > image > position > repeat > [size] > attachment
+            
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat  fixed;
+            background-size: cover;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -26,6 +37,12 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error recusandae facere aliquid ipsam blanditiis saepe doloribus a repellendus laudantium? Aliquid temporibus sequi eum inventore veniam itaque id quia voluptatibus iusto?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, ut vel in consectetur illo iure eos! Quae consequuntur sapiente nihil reiciendis voluptatibus eveniet optio, exercitationem ducimus a, blanditiis illo error!iusto?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae facere obcaecati minus eaque ab, atque, blanditiis magnam consectetur itaque omnis corporis corrupti neque ad iure iusto dicta, quia esse impedit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error recusandae facere aliquid ipsam blanditiis saepe doloribus a repellendus laudantium? Aliquid temporibus sequi eum inventore veniam itaque id quia voluptatibus iusto?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, ut vel in consectetur illo iure eos! Quae consequuntur sapiente nihil reiciendis voluptatibus eveniet optio, exercitationem ducimus a, blanditiis illo error!iusto?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae facere obcaecati minus eaque ab, atque, blanditiis magnam consectetur itaque omnis corporis corrupti neque ad iure iusto dicta, quia esse impedit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error recusandae facere aliquid ipsam blanditiis saepe doloribus a repellendus laudantium? Aliquid temporibus sequi eum inventore veniam itaque id quia voluptatibus iusto?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, ut vel in consectetur illo iure eos! Quae consequuntur sapiente nihil reiciendis voluptatibus eveniet optio, exercitationem ducimus a, blanditiis illo error!iusto?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae facere obcaecati minus eaque ab, atque, blanditiis magnam consectetur itaque omnis corporis corrupti neque ad iure iusto dicta, quia esse impedit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error recusandae facere aliquid ipsam blanditiis saepe doloribus a repellendus laudantium? Aliquid temporibus sequi eum inventore veniam itaque id quia voluptatibus iusto?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, ut vel in consectetur illo iure eos! Quae consequuntur sapiente nihil reiciendis voluptatibus eveniet optio, exercitationem ducimus a, blanditiis illo error!iusto?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae facere obcaecati minus eaque ab, atque, blanditiis magnam consectetur itaque omnis corporis corrupti neque ad iure iusto dicta, quia esse impedit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error recusandae facere aliquid ipsam blanditiis saepe doloribus a repellendus laudantium? Aliquid temporibus sequi eum inventore veniam itaque id quia voluptatibus iusto?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, ut vel in consectetur illo iure eos! Quae consequuntur sapiente nihil reiciendis voluptatibus eveniet optio, exercitationem ducimus a, blanditiis illo error!iusto?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae facere obcaecati minus eaque ab, atque, blanditiis magnam consectetur itaque omnis corporis corrupti neque ad iure iusto dicta, quia esse impedit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error recusandae facere aliquid ipsam blanditiis saepe doloribus a repellendus laudantium? Aliquid temporibus sequi eum inventore veniam itaque id quia voluptatibus iusto?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, ut vel in consectetur illo iure eos! Quae consequuntur sapiente nihil reiciendis voluptatibus eveniet optio, exercitationem ducimus a, blanditiis illo error!iusto?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae facere obcaecati minus eaque ab, atque, blanditiis magnam consectetur itaque omnis corporis corrupti neque ad iure iusto dicta, quia esse impedit.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error recusandae facere aliquid ipsam blanditiis saepe doloribus a repellendus laudantium? Aliquid temporibus sequi eum inventore veniam itaque id quia voluptatibus iusto?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, ut vel in consectetur illo iure eos! Quae consequuntur sapiente nihil reiciendis voluptatibus eveniet optio, exercitationem ducimus a, blanditiis illo error!iusto?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae facere obcaecati minus eaque ab, atque, blanditiis magnam consectetur itaque omnis corporis corrupti neque ad iure iusto dicta, quia esse impedit.</p>
     </main>
     
