atualização no desafio014

--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -27,15 +27,15 @@
 <body>
     <table>
         <thead>
-            <tr>
-                <th scope="col" rowspan="2" class="titulos">Área</th>
-                <th scope="col"  rowspan="2" class="titulos">Disciplinas</th>
-                <th scope="colgroup" colspan="2" class="titulos">Notas</th>
-                <th scope="col" rowspan="2" class="titulos">Média</th>
+            <tr class="titulos">
+                <th scope="col" rowspan="2" >Área</th>
+                <th scope="col"  rowspan="2" >Disciplinas</th>
+                <th scope="colgroup" colspan="2" >Notas</th>
+                <th scope="col" rowspan="2" >Média</th>
             </tr>
-            <tr>
-                <th scope="col" class="titulos">Nota1</th>
-                <th scope="col" class="titulos">Nota2</th>
+            <tr class="titulos">
+                <th scope="col">Nota1</th>
+                <th scope="col">Nota2</th>
             </tr>
             <tbody>
                 <tr>
@@ -63,9 +63,9 @@
                     <td>0.0</td>
                     <td>0.0</td>
                 </tr>
-                <tr>
-                    <th scope="row" colspan="4" class="titulos">Media de Exatas</th>
-                    <td class="titulos">0.0</td>
+                <tr class="titulos">
+                    <th scope="row" colspan="4">Media de Exatas</th>
+                    <td >0.0</td>
                 </tr>
                 <tr>
                     <th scope="rowgroup" rowspan="2" >Humanas</th>
@@ -80,9 +80,9 @@
                     <td>0.0</td>
                     <td>0.0</td>
                 </tr>
-                <tr>
-                    <th scope="row" colspan="4" class="titulos">Média de Humanas</th>
-                    <td class="titulos">0.0</td>
+                <tr class="titulos">
+                    <th scope="row" colspan="4">Média de Humanas</th>
+                    <td>0.0</td>
                 </tr>
             </tbody>
         </thead>
