--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -9,6 +9,7 @@
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
+
         #tela {
             width: 95vh;
             height: 400px;
@@ -36,12 +37,19 @@
         deleniti velit quasi, maiores quaerat odit voluptate reiciendis officiis. Repudiandae consectetur nemo tenetur
         nam placeat porro officia, esse libero?</p>
 
-    <iframe src=""name="frame" id="tela">
+    <iframe name="frame" id="tela"
+        srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis excepturi repellat incidunt corporis fugit aut et cumque sint, necessitatibus officiis illum error ipsa facere earum? Suscipit porro nisi voluptates amet. Quam optio perferendis eaque iste repellendus aliquid consectetur dicta? Deserunt?</p>  ">
         <p>Infelizmente seu navegador não é compatível com isso</p>
     </iframe>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates doloremque qui culpa unde voluptatem labore, delectus exercitationem sunt aliquid ratione quisquam velit esse nesciunt fugiat expedita atque dolor rerum. Neque ipsa possimus expedita aut porro debitis facilis magni tenetur omnis, nobis perferendis reprehenderit autem beatae enim non, voluptates distinctio? Similique.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates doloremque qui culpa unde voluptatem labore, delectus exercitationem sunt aliquid ratione quisquam velit esse nesciunt fugiat expedita atque dolor rerum. Neque ipsa possimus expedita aut porro debitis facilis magni tenetur omnis, nobis perferendis reprehenderit autem beatae enim non, voluptates distinctio? Similique.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates doloremque qui culpa unde voluptatem labore,
+        delectus exercitationem sunt aliquid ratione quisquam velit esse nesciunt fugiat expedita atque dolor rerum.
+        Neque ipsa possimus expedita aut porro debitis facilis magni tenetur omnis, nobis perferendis reprehenderit
+        autem beatae enim non, voluptates distinctio? Similique.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates doloremque qui culpa unde voluptatem labore,
+        delectus exercitationem sunt aliquid ratione quisquam velit esse nesciunt fugiat expedita atque dolor rerum.
+        Neque ipsa possimus expedita aut porro debitis facilis magni tenetur omnis, nobis perferendis reprehenderit
+        autem beatae enim non, voluptates distinctio? Similique.</p>
 </body>
 
 </html>
