--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -38,7 +38,7 @@
         nam placeat porro officia, esse libero?</p>
 
     <iframe name="frame" id="tela"
-        srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis excepturi repellat incidunt corporis fugit aut et cumque sint, necessitatibus officiis illum error ipsa facere earum? Suscipit porro nisi voluptates amet. Quam optio perferendis eaque iste repellendus aliquid consectetur dicta? Deserunt?</p>  ">
+        srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis excepturi repellat incidunt corporis fugit aut et cumque sint, necessitatibus officiis illum error ipsa facere earum? Suscipit porro nisi voluptates amet. Quam optio perferendis eaque iste repellendus aliquid consectetur dicta? Deserunt?</p> <img src='imagens/cursoemvideo.png'> ">
         <p>Infelizmente seu navegador não é compatível com isso</p>
     </iframe>
 
